# pymulsim

./: README.md  pyproject.toml  setup.py
.github/workflows/: pypi_workflow.yml  python-publish.yml
example/: example.py
example/dataset/: synt50_noise10.txt  synt50_original.txt
pymulsim/: GIN.py  PyMulSim.py  Utils.py  __init__.py
src/pymulsim/: __init__.py
