[tool.poetry]
name = "node2vec"
version = "0.4.6"
description = "Implementation of the node2vec algorithm"
authors = ["Pietro Cinaglia <cinaglia@unicz.it>"]
repository = "https://github.com/pietrocinaglia/pymulsim"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.6"
numpy == "^1.23.2"
torch == "^2.0.1"
torch_geometric == "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "PyMulSim"
version = "0.1"
authors = [
  { name="Pietro Cinaglia", email="cinaglia@unicz.it" },
]
description = "A package for computing node similarities between multilayer networks by using embeddings (via Graph Neural Networks / Graph Isomorphism Network)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pietrocinaglia/pymulsim"
"Bug Tracker" = "https://github.com/pietrocinaglia/pymulsim/issues"